src/components/HeroBanner/HeroBanner.module.scss
.mainWrapper {
  position: relative;
  margin: auto;
  height: 38vw;
  width: 100%;
  padding: 0 6rem;
  background: radial-gradient(hsl(0, 0%, 100%), hsl(0, 0%, 90%));
  border-bottom: 1px solid var(--grey);
}

.heroOne,
.heroTwo {
  position: absolute;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.heroTextOne,
.heroTextTwo {
  padding: 0.5rem 1rem;
  font-family: "AlegreyaSans", sans-serif;
  text-align: center;
  flex-grow: 0;
}

.heroTextOne {
  margin-left: 6vw;
  font-size: 4.3vw;
  border-bottom: clamp(1px, 1vw, 6px) solid var(--accent-color-green);
}

.heroTextTwo {
  margin-left: 6vw;
  font-size: 4vw;
  width: 40vw;
  border-bottom: clamp(1px, 1vw, 6px) solid var(--accent-color-blue);
}

.heroImageOne {
  max-width: 51%;
}

.heroImageTwo {
  max-width: 50.7%;
}

